--- a/project the glass huts/index.html
+++ b/project the glass huts/index.html
@@ -138,14 +138,14 @@
           <h2 class="main__article-title">
             The Cabins
           </h2>
-          <p class="main__article-text">
+          <!-- <p class="main__article-text">
             Løvtag`s three exclusive and comfortable cabins, Et, Ro and Ly, are designed by architect Sigurd Larsen.
             They all have an open space with a double bed, a double sofa bed, kitchen, separate toilet and an outdoor
             shower. On the
             roof, surrounded by treetops, there is a terrace, which is about nine meters above ground. The cottages are
             built
             around tall, old trees that go through the entire cottage from floor to ceiling.
-          </p>
+          </p> -->
           <a class="main__article-link" href="#">Read More</a>
         </div>
         <div class="main__picture">
